2005-06-20  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-post-offline): New command, post while
	offline for batch uploading later.
	(delicious-post-cache): New command, post the current cache as a
	batch.
	(delicious-clear-cache): New command, clear the current cache
	file.
	(delicious-post-offline): Small change to make sure a backup of
	the cache file is created when it's changed.

	* delicioapi.el (delicious-cache-file): New option. Path to cache
	filename.

2005-06-12  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-w3m-html): Fixed so that it actually
	uses 15 for the default number if you hit return.

2005-06-05  johnsu01  <john@wjsullivan.net>

	* delicioapi.el (delicious-send-request): Fixed error checking so
	that it doesn't lie and say everything is fine when there is a 503
	error. Some line length cleanups. Added specific error message for
	when you have been banned by the server.

2005-05-18  johnsu01  <john@wjsullivan.net>

	* planner-delicious.el (planner-delicious-insert-posts): Copied
	some sanity checks from planner-diary.el to make sure we're not
	mangling an innocent buffer.
	(planner-delicious-insert-posts-all): New interactive command to
	insert posts matching all of a list of tags, and optionally a
	date.
	(planner-delicious-insert-posts-any): New interactive command to
	insert posts matching any of a list of tags, and optionally a
	date.
	(planner-delicious-insert-posts): Added safety check to throw an
	error when you try to match a tag you have never used before,
	until I understand the bug. Without this, emacs was locking up in
	this case.

2005-05-12  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-get-timestamp): Use existing
	XML-parsing functions instead of a special one for
	timestamp. Function now returns a time value.

	* delicioapi.el (delicious-api-parse-timestamp): Deleted, since
	we're using the existing XML-parsing functions.
	
2005-05-10  John Sullivan  <john@wjsullivan.net>
